# shader-compiler-rs

./: .gitignore  Cargo.toml  README.md
bridge/: Cargo.toml  build.rs
bridge/src/: bridge.cc  bridge.hpp  lib.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
sys/: Cargo.toml  build.rs
sys/shader-compiler/: profile.h
sys/shader_compiler/backend/spirv/: emit_spirv_memory.cpp  spirv_emit_context.cpp
