[package]
name = "shader-compiler-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shader-compiler-sys = { path = "../sys" }
cxx = "1.0.91"
tracing = "0.1.37"

[build-dependencies]
cxx-build = "1.0.91"